# Colorhythm

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
ableton Project/: ableton.als
scripts/: create_matrix.py  matrix_to_midi.py  matrix_to_midi_live.py  midi_to_eye.py  output.mid  shape_recognition.py
src/colorhythm/core/: camera.py  processing.py
src/colorhythm/utils/: io.py
tests/: test_video.py
