[tool.poetry]
name = "colorhythm"
version = "0.1.0"
description = "Generate scores/melody from colorful paper sliders"
authors = ["Thomas Pouponneau <thomas.pouponneau@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "colorhythm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"